# sar_apple2

./: .gitmodules  ControlCpu.xpr  Makefile  SarAppleII.xpr  apple2_sim_behav.wcfg  sim_top_behav.wcfg
ControlCpu.srcs/VexRiscv/: GenCompuSar.scala  Readme
ControlCpu.srcs/constrs_1/new/: board.xdc
ControlCpu.srcs/saros/: Makefile.am  abort.cpp  boot_loader.mem  boot_loader_state.mem  configure.ac  saros.lds
ControlCpu.srcs/saros/bl1/: Makefile.am  bl1.lds  bl1_main.cpp  elf_reader.cpp  start.s
ControlCpu.srcs/saros/common/: format.cpp
ControlCpu.srcs/saros/include/: abort.h  memory.h  uart.h
ControlCpu.srcs/saros/include/ds/: pool.h
ControlCpu.srcs/saros/include/saros/: csr.h  saros.h  spin_lock.h
ControlCpu.srcs/saros/include/saros/kernel/: scheduler.h  thread.h  thread_queue.h  thread_stack.h
ControlCpu.srcs/saros/include/saros/sync/: event.h
ControlCpu.srcs/saros/saros/: Makefile.am  crt.cpp  irq.cpp  irq_wrapper.s  main.cpp  saros.cpp  saros.lds  start.s  uart.cpp
ControlCpu.srcs/saros/saros/kernel/: Makefile.am  context.s  scheduler.cpp  thread.cpp
ControlCpu.srcs/sim_1/new/: sim_top.sv
ControlCpu.srcs/sources_1/new/: io_block.sv  memory.xdc  seg_display.sv  timer_int_ctrl.sv  top.sv  uart_ctrl.sv
SarAppleII.srcs/: memory_map
SarAppleII.srcs/apple2_sim/new/: Apple2_Plus.mem  apple2_sim.sv
SarAppleII.srcs/constrs_1/new/: board.xdc
SarAppleII.srcs/display_sim/: display_sim_behav.wcfg  screen.mem  screen.txt
SarAppleII.srcs/display_sim/new/: display_sim.sv
SarAppleII.srcs/saros/: Makefile.am  abort.cpp  boot_loader.mem  boot_loader_state.mem  configure.ac  saros.lds
SarAppleII.srcs/saros/bl1/: Makefile.am  bl1.ld  bl1.lds  bl1_main.cpp  bl1_start.cpp  memtest.cpp  start.s  uart.cpp
SarAppleII.srcs/saros/common/: gpio.cpp
SarAppleII.srcs/saros/include/: format.h  gpio.h  irq.h  memtest.h  p1c1.h  uart.h
SarAppleII.srcs/saros/include/ds/: pool.h
SarAppleII.srcs/saros/include/saros/: saros.h  spin_lock.h
SarAppleII.srcs/saros/include/saros/kernel/: thread.h  thread_stack.h
SarAppleII.srcs/saros/include/saros/sync/: queue.h
SarAppleII.srcs/saros/roms/: assemblify
SarAppleII.srcs/saros/saros/: Makefile.am  apple2.cpp  apple2.h  csr.h  irq.cpp  main.cpp  saros.cpp  saros.lds  start.cpp  start.s  uart.cpp
SarAppleII.srcs/saros/saros/kernel/: Makefile.am  context.s  scheduler.cpp  thread.cpp  thread_queue.cpp
SarAppleII.srcs/sim_1/MT25QL256ABA8E0_VG13/: readme.txt  run_modelsim  run_ncsim  run_vcs  test.txt
SarAppleII.srcs/sim_1/MT25QL256ABA8E0_VG13/include/: UserData.h
SarAppleII.srcs/sim_1/MT25QL256ABA8E0_VG13/sim/: mem_Q512.vmf  sfdp.vmf  wave.do
SarAppleII.srcs/sim_1/MT25QL256ABA8E0_VG13/stim/: Readme.txt  XIP_Numonyx.v  dummy_prova.v  erase.v  lock1.v  lock2.v  lock_test_SR.v  otp.v  program.v  read.v  read_.v  read_dtr.v  test_address_mode.v  test_protocol.v
SarAppleII.srcs/sim_1/new/: sim_top.sv
SarAppleII.srcs/sim_RiscV/: .gitignore  Makefile  sim_riscv_behav.wcfg  testprog.ld  testprog.s
SarAppleII.srcs/sim_RiscV/new/: sim_riscv.sv
SarAppleII.srcs/sources_1/new/: VexRiscv.v  apple_io.sv  apple_pager.sv  cache.sv  clk_converter.sv  display.sv  freq_div_bus.sv  gpio.sv  io_block.sv  timer_int_ctrl.sv  top.sv  uart_ctrl.sv
scripts/: make_hex.py
