SUBDIRS=kernel .

AM_CCASFLAGS=$(ARCH) $(ABI)
AM_CXXFLAGS=$(ARCH) $(ABI)
AM_CFLAGS=$(ARCH) $(ABI)
AM_CPPFLAGS=-I$(top_srcdir)/include -DSAROS

REMOVED_SECTIONS=
TOOLCHAIN_PATH=/opt/riscv
TOOLCHAIN_LIB_PATH=$(TOOLCHAIN_PATH)/lib/gcc/$(HOST_TRIPLET)/14.2.0

commondir=$(top_srcdir)/common

ARCH=-march=rv32i
ABI=-mabi=ilp32

noinst_PROGRAMS=saros.elf

saros_elf_SOURCES=main.cpp uart.cpp saros.cpp $(commondir)/format.cpp irq.cpp $(commondir)/reg.cpp $(commondir)/gpio.cpp irq_wrapper.s \
                  apple2.cpp ../roms/Apple2_Plus_rom.s start.s ../abort.cpp crt.cpp
EXTRA_saros_elf_DEPENDENCIES=$(srcdir)/saros.lds kernel/libkernel.a
saros_elf_LDFLAGS=-T $(srcdir)/saros.lds --orphan-handling=error
saros_elf_LDADD=$(TOOLCHAIN_LIB_PATH)/libgcc.a $(TOOLCHAIN_PATH)/$(HOST_TRIPLET)/lib/libc.a kernel/libkernel.a

saros.elf$(EXEEXT): $(saros_elf_OBJECTS) $(EXTRA_saros_elf_DEPENDENCIES)
	$(HOST_TRIPLET)-ld $(LDFLAGS) $(AM_LDFLAGS) $(saros_elf_LDFLAGS) -melf32lriscv $(saros_elf_OBJECTS) -o "$@" $(saros_elf_LDADD)

saros.bin: saros.elf$(EXEEXT)
	cp $< $@.tmp
	$(HOST_TRIPLET)-strip $@.tmp
	mv $@.tmp $@

$(top_srcdir)/roms/%.rom:
	wget 'https://github.com/AppleWin/AppleWin/raw/refs/heads/master/resource/$*.rom' -O '$@'.tmp
	mv '$@.tmp' '$@'
.PRECIOUS: $(srcdir)/roms/%.rom

$(top_builddir)/roms/%_rom.s: $(top_srcdir)/roms/%.rom $(top_srcdir)/roms/assemblify
	mkdir -p $(top_builddir)/roms
	$(top_srcdir)/roms/assemblify --section '.apple2_rom' '$<' '$@'

kernel/%:
	$(MAKE) -C kernel "$*"
